# camxmctl

./: .gitignore  Makefile.am  README.md  configure.ac
data/: camctl.html
doc/: INSTALL.txt  TODO.txt
src/: Makefile.am  camxmctl.c  camxmctl.h  util.c  util.h  webu.c  webu.h
